# ml_wasm

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: nextjs.yaml
frontend/: next.config.mjs  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/ui/: DetectedImage.tsx  FetchDetectedImage.tsx
onnx/: yolo.py
src/: lib.rs  yolov8.rs
